syntax = "proto3";

package go.micro.srv.user;

option go_package = "proto/user";

service User {
	rpc SentSms(Request) returns (Response) {};
	rpc RegisterModel(RegReq) returns (Response) {};
	rpc GetallArea(Request) returns (Resp) {};
	rpc LoginUser(LoginReq) returns (Response) {};
	rpc GetUserInfo(UserName) returns (Resp) {};
	rpc UpdataUser(UpdataName) returns (Response) {};
}

message UpdataName {
    string oldname = 1;
    string newname = 2;
}

message UserName {
    string username = 1;
}


message LoginReq {
    string mobile = 1;
    string password = 2;
}

message RegReq {
    string mobile = 1;
    string password =2;
    string smscode = 3;
}

message Request {
	string phone = 1;
	string uuid = 2;
	string imgcode = 3;
}

message Response {
	string errno = 1;
	string errmsg = 2;
}

message Resp {
    string errno = 1;
    string errmsg = 2;
    bytes  data = 3;
}